Fix link navigation

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="gallery.html" class="nav-link smoothScroll">Gellery</a>
+                        <a href="gallery.html" class="nav-link smoothScroll">Gallery</a>
                     </li>
 
                     <li class="nav-item">
@@ -77,15 +77,14 @@
                 </ul>
 
                 <ul class="social-icon ml-lg-3">
-                    <!-- <button class="btn btn-order"><i class="fa fa-bar-chart"></i> &nbsp; Support Us</button> -->
                     <li class="nav-item" ><a href="support.html"  class="nav-link smoothScroll"> <i class="fa fa-bar-chart"></i> &nbsp; Support Us</a></li>
                 </ul>
-                <div class="user-login-outline">
+                <!-- <div class="user-login-outline">
                     <div class="user-login-pic">
-                        <!-- <i class="fa fa-user"></i> -->
+                         <i class="fa fa-user"></i> 
                         <img src="images/profil/profileMsin.jpg" alt="" class="img-fluid">
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </div>
@@ -102,9 +101,9 @@
 
                          <div class="col-lg-8 col-md-10  col-12">
                               <div class="hero-text mt-5">
-                                    <h1 data-aos="fade-up" data-aos-delay="500">Upgrade your body at Gymso Fitness</h1>
+                                    <h1 data-aos="fade-up" data-aos-delay="500">Hey there, down here 👋 Want to hear something cool?</h1>
 
-                                    <a href="#about" class="btn custom-btn  mt-3" data-aos="fade-up" data-aos-delay="700">learn more</a>
+                                    <a href="contact.html" class="btn custom-btn  mt-3" data-aos="fade-up" data-aos-delay="700">Learn more about us</a>
 
                               </div>
                          </div>
@@ -127,11 +126,17 @@
                     <div class="row mb-4">
 
                             <div class=" mb-lg-0 mb-4 col-lg-5 col-md-10  col-12">
-                                <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Hello, we are Winshow</h2>
-                                <p data-aos="fade-up" data-aos-delay="400">You are NOT allowed to redistribute this HTML template downloadable ZIP file on any template collection site. You are allowed to use this template for your personal or business websites.</p>
+                                <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Let us do all the work for you so you don’t have to</h2>
+                                <p data-aos="fade-up" data-aos-delay="400">
+                                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                                    by injected humour, or randomised words which don't look even slightly believable.
+                                </p>
 
-                                <p data-aos="fade-up" data-aos-delay="500">If you have any question regarding <a rel="nofollow" href="https://www.tooplate.com/view/2119-gymso-fitness" target="_parent">Gymso Fitness HTML template</a>, you can <a rel="nofollow" href="https://www.tooplate.com/contact" target="_parent">contact Tooplate</a> immediately. Thank you.</p>
-                                <a href="" class="btn custom-btn display-view" data-aos="fade-up" data-aos-delay="500">Read More <i class="fa fa-long-arrow-right"></i> </a>
+                                <p data-aos="fade-up" data-aos-delay="500">
+                                    If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
+                                    middle of text.
+                                </p>
+                                <a href="contact.html" class="btn custom-btn display-view" data-aos="fade-up" data-aos-delay="500">Read More</i> </a>
 
                             </div>
 
@@ -150,7 +155,7 @@
      </section>
 
 
-     <!-- CLASS -->
+     <!-- interviews -->
      <section class="class section">
                <div class="container">
 
@@ -170,7 +175,7 @@
                                    </div>
 
                                     <div class="class-info">
-                                        <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a> </h3>
+                                        <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a> </h3>
                                         <div class="info d-flex justify-content-between">
                                             <p>June 3 , 2022 <span></span> 45min 15sec</p>
                                             <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
@@ -186,7 +191,7 @@
                                     </div>
 
                                      <div class="class-info">
-                                         <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a></h3>
+                                         <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a></h3>
                                          <div class="info d-flex justify-content-between">
                                              <p>June 3 , 2022 <span></span> 45min 15sec</p>
                                              <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
@@ -202,7 +207,7 @@
                                     </div>
 
                                      <div class="class-info">
-                                         <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a></h3>
+                                         <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a></h3>
                                          <div class="info d-flex justify-content-between">
                                              <p>June 3 , 2022 <span></span> 45min 15sec</p>
                                              <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
@@ -221,7 +226,7 @@
                                </div>
 
                                 <div class="class-info">
-                                    <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a></h3>
+                                    <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a></h3>
                                     <div class="info d-flex justify-content-between">
                                         <p>June 3 , 2022 <span></span> 45min 15sec</p>
                                         <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
@@ -237,7 +242,7 @@
                                 </div>
 
                                  <div class="class-info">
-                                     <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a></h3>
+                                     <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a></h3>
                                      <div class="info d-flex justify-content-between">
                                          <p>June 3 , 2022 <span></span> 45min 15sec</p>
                                          <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
@@ -253,7 +258,7 @@
                                 </div>
 
                                  <div class="class-info">
-                                     <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a></h3>
+                                     <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a></h3>
                                      <div class="info d-flex justify-content-between">
                                          <p>June 3 , 2022 <span></span> 45min 15sec</p>
                                          <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
@@ -272,8 +277,6 @@
 
                </div>
      </section>
-
-
 
      <!-- latest blog -->
      <section class="news section">
@@ -295,7 +298,7 @@
                             </div>
 
                              <div class="news-info">
-                                 <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a> </h3>
+                                 <h3 class="mb-1"><a href="shownews.html">Yoga ap prezante , premye mizik li...</a> </h3>
                                  <span> <strong> By Josadra16</strong></span>
                                  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing consectetur adipiscing</p>
                                  <div class="info d-flex justify-content-between">
@@ -312,7 +315,7 @@
                              </div>
 
                              <div class="news-info">
-                                <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a> </h3>
+                                <h3 class="mb-1"><a href="shownews.html">Yoga ap prezante , premye mizik li...</a> </h3>
                                 <span> <strong> By Josadra16</strong></span>
                                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing consectetur adipiscing</p>
                                 <div class="info d-flex justify-content-between">
@@ -329,7 +332,7 @@
                              </div>
 
                              <div class="news-info">
-                                <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a> </h3>
+                                <h3 class="mb-1"><a href="shownews.html">Yoga ap prezante , premye mizik li...</a> </h3>
                                 <span> <strong> By Josadra16</strong></span>
                                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing consectetur adipiscing</p>
                                 <div class="info d-flex justify-content-between">
@@ -349,7 +352,7 @@
                        </div>
 
                         <div class="news-info">
-                            <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a> </h3>
+                            <h3 class="mb-1"><a href="shownews.html">Yoga ap prezante , premye mizik li...</a> </h3>
                             <span> <strong> By Josadra16</strong></span>
                             <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing consectetur adipiscing</p>
                             <div class="info d-flex justify-content-between">
@@ -366,7 +369,7 @@
                         </div>
 
                         <div class="news-info">
-                           <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a> </h3>
+                           <h3 class="mb-1"><a href="shownews.html">Yoga ap prezante , premye mizik li...</a> </h3>
                            <span> <strong> By Josadra16</strong></span>
                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing consectetur adipiscing</p>
                            <div class="info d-flex justify-content-between">
@@ -383,7 +386,7 @@
                         </div>
 
                         <div class="news-info">
-                           <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a> </h3>
+                           <h3 class="mb-1"><a href="shownews.html">Yoga ap prezante , premye mizik li...</a> </h3>
                            <span> <strong> By Josadra16</strong></span>
                            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing consectetur adipiscing</p>
                            <div class="info d-flex justify-content-between">
@@ -402,7 +405,7 @@
         </div>
 
         </div>
-</section>
+     </section>
 
      <!-- SCHEDULE -->
      <section class="schedule" id="schedule">
@@ -436,13 +439,13 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <p class="footer-title mb-4">Links</p>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-link mb-1" href="#">Home</a>
-                    <a class="text-link mb-1" href="#">Interviews</a>
-                    <a class="text-link mb-1" href="#">News</a>
-                    <a class="text-link mb-1" href="#">Interviews Request</a>
-                    <a class="text-link mb-1" href="#">Gallery</a>
-                    <a class="text-link mb-1" href="#">Team</a>
-                    <a class="text-link mb-1" href="#">Support</a>
+                    <a class="text-link mb-1" href="index.html">Home</a>
+                    <a class="text-link mb-1" href="interviews.html">Interviews</a>
+                    <a class="text-link mb-1" href="news.html">News</a>
+                    <a class="text-link mb-1" href="request.html">Interviews Request</a>
+                    <a class="text-link mb-1" href="gallery.html">Gallery</a>
+                    <a class="text-link mb-1" href="team.html">Team</a>
+                    <a class="text-link mb-1" href="support.html">Support</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
