--- a/interviews.html
+++ b/interviews.html
@@ -46,35 +46,36 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-lg-auto">
                     <li class="nav-item">
-                        <a href="#home" class="nav-link smoothScroll">Home</a>
+                        <a href="index.html" class="nav-link smoothScroll">Home</a>
                     </li>
 
                     <li class="nav-item">
                         <a href="interviews.html" class="nav-link smoothScroll">Interviews</a>
                     </li>
                     <li class="nav-item">
-                        <a href="modal.html" class="nav-link smoothScroll">News</a>
+                        <a href="news.html" class="nav-link smoothScroll">News</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#class" class="nav-link smoothScroll">Interview Request</a>
+                        <a href="request.html" class="nav-link smoothScroll">Interview Request</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#schedule" class="nav-link smoothScroll">Gellery</a>
+                        <a href="gallery.html" class="nav-link smoothScroll">Gallery</a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link smoothScroll">Team</a>
+                        <a href="team.html" class="nav-link smoothScroll">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a href="modal.html" class="nav-link smoothScroll">Contact</a>
+                        <a href="contact.html" class="nav-link smoothScroll">Contact</a>
                     </li>
 
                 </ul>
 
                 <ul class="social-icon ml-lg-3">
-                    <li class="nav-item"><a href=""  class="nav-link smoothScroll"> <i class="fa fa-money"></i> &nbsp; Support Us</a></li>
+                    <li class="nav-item"><a href="support.html" class="nav-link smoothScroll"> <i class="fa fa-bar-chart"></i> &nbsp;
+                            Support Us</a></li>
                 </ul>
             </div>
 
@@ -282,13 +283,13 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <p class="footer-title mb-4">Links</p>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-link mb-1" href="#">Home</a>
-                    <a class="text-link mb-1" href="#">Interviews</a>
-                    <a class="text-link mb-1" href="#">News</a>
-                    <a class="text-link mb-1" href="#">Interviews Request</a>
-                    <a class="text-link mb-1" href="#">Gallery</a>
-                    <a class="text-link mb-1" href="#">Team</a>
-                    <a class="text-link mb-1" href="#">Support</a>
+                    <a class="text-link mb-1" href="index.html">Home</a>
+                    <a class="text-link mb-1" href="interviews.html">Interviews</a>
+                    <a class="text-link mb-1" href="news.html">News</a>
+                    <a class="text-link mb-1" href="request.html">Interviews Request</a>
+                    <a class="text-link mb-1" href="gallery.html">Gallery</a>
+                    <a class="text-link mb-1" href="team.html">Team</a>
+                    <a class="text-link mb-1" href="support.html">Support</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
