--- a/support.html
+++ b/support.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Winshow</title>
+     <title>Support us</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -149,125 +149,131 @@
 
         </div>
 </section>
-<!--Latest Interviews-->
+<!-- interviews -->
 <section class="class section">
     <div class="container">
-    
-         <div class="row">
-             <div class="mt-lg-5 mb-lg-0 mb-2 col-lg-5 col-md-10  col-12">
-             <div class="section-title" data-aos="fade-up" data-aos-delay="300">
-                 <h2>while you are here</h2>
-                 <p>Latest Interviews</p>
-             </div>
-             </div>
-         </div>
-         <div class="row mb-4">
-                 <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="400">
-                     <div class="class-interviews">
-                        <div class="cover-interviews">
-                         <img src="images/interviews/1.jpg" alt="" class="img-fluid">
-                        </div>
 
-                         <div class="class-info">
-                             <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a> </h3>
-                             <div class="info d-flex justify-content-between">
-                                 <p>June 3 , 2022 <span></span> 45min 15sec</p>
-                                 <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
-
-                 <div class="mt-5 mt-lg-0 mt-md-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="500">
-                     <div class="class-interviews">
-                         <div class="cover-interviews">
-                             <img src="images/interviews/2.jpg" alt="" class="img-fluid">
-                         </div>
-
-                          <div class="class-info">
-                              <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a></h3>
-                              <div class="info d-flex justify-content-between">
-                                  <p>June 3 , 2022 <span></span> 45min 15sec</p>
-                                  <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
-                              </div>
-                          </div>
-                      </div>
-                 </div>
-
-                 <div class="mt-5 mt-lg-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
-                     <div class="class-interviews">
-                         <div class="cover-interviews">
-                             <img src="images/interviews/3.jpg" alt="" class="img-fluid">
-                         </div>
-
-                          <div class="class-info">
-                              <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a></h3>
-                              <div class="info d-flex justify-content-between">
-                                  <p>June 3 , 2022 <span></span> 45min 15sec</p>
-                                  <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
-                              </div>
-                          </div>
-                      </div>
-                 </div>
-
-         </div>
-
-         <div class="row mb-4">
-             <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="400">
-                 <div class="class-interviews">
+        <div class="row">
+            <div class="mt-lg-5 mb-lg-0 mb-2 col-lg-5 col-md-10  col-12">
+                <div class="section-title" data-aos="fade-up" data-aos-delay="300">
+                    <h2>Interviews</h2>
+                    <p>Latest Interviews</p>
+                </div>
+            </div>
+        </div>
+        <div class="row mb-4">
+            <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="400">
+                <div class="class-interviews">
                     <div class="cover-interviews">
-                     <img src="images/interviews/4.jpg" alt="" class="img-fluid">
+                        <img src="images/interviews/1.jpg" alt="" class="img-fluid">
                     </div>
 
-                     <div class="class-info">
-                         <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a></h3>
-                         <div class="info d-flex justify-content-between">
-                             <p>June 3 , 2022 <span></span> 45min 15sec</p>
-                             <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
-                         </div>
-                     </div>
-                 </div>
-             </div>
+                    <div class="class-info">
+                        <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a> </h3>
+                        <div class="info d-flex justify-content-between">
+                            <p>June 3 , 2022 <span></span> 45min 15sec</p>
+                            <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share">
+                                <i class="fa fa-share"></i> </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-             <div class="mt-5 mt-lg-0 mt-md-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="500">
-                 <div class="class-interviews">
-                     <div class="cover-interviews">
-                         <img src="images/interviews/5.jpg" alt="" class="img-fluid">
-                     </div>
+            <div class="mt-5 mt-lg-0 mt-md-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="500">
+                <div class="class-interviews">
+                    <div class="cover-interviews">
+                        <img src="images/interviews/2.jpg" alt="" class="img-fluid">
+                    </div>
 
-                      <div class="class-info">
-                          <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a></h3>
-                          <div class="info d-flex justify-content-between">
-                              <p>June 3 , 2022 <span></span> 45min 15sec</p>
-                              <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
-                          </div>
-                      </div>
-                  </div>
-             </div>
+                    <div class="class-info">
+                        <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a></h3>
+                        <div class="info d-flex justify-content-between">
+                            <p>June 3 , 2022 <span></span> 45min 15sec</p>
+                            <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share">
+                                <i class="fa fa-share"></i> </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-             <div class="mt-5 mt-lg-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
-                 <div class="class-interviews">
-                     <div class="cover-interviews">
-                         <img src="images/interviews/6.jpg" alt="" class="img-fluid">
-                     </div>
+            <div class="mt-5 mt-lg-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
+                <div class="class-interviews">
+                    <div class="cover-interviews">
+                        <img src="images/interviews/3.jpg" alt="" class="img-fluid">
+                    </div>
 
-                      <div class="class-info">
-                          <h3 class="mb-1"><a href="">Yoga ap prezante , premye mizik li...</a></h3>
-                          <div class="info d-flex justify-content-between">
-                              <p>June 3 , 2022 <span></span> 45min 15sec</p>
-                              <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share"> <i class="fa fa-share"></i> </span>
-                          </div>
-                      </div>
-                  </div>
-             </div>
+                    <div class="class-info">
+                        <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a></h3>
+                        <div class="info d-flex justify-content-between">
+                            <p>June 3 , 2022 <span></span> 45min 15sec</p>
+                            <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share">
+                                <i class="fa fa-share"></i> </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-     </div>
-     
-     <div class="row justify-content-end">
-         <div class=" mb-lg-0 mb-2 col-lg-2 col-md-10  col-12" data-aos="zoom-in-left" data-aos-delay="500">
-             <a href="" class="btn order-btn">Show More  <i class="fa fa-long-arrow-right"></i></a>
-         </div>
-     </div>
+        </div>
+
+        <div class="row mb-4">
+            <div class="col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="400">
+                <div class="class-interviews">
+                    <div class="cover-interviews">
+                        <img src="images/interviews/4.jpg" alt="" class="img-fluid">
+                    </div>
+
+                    <div class="class-info">
+                        <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a></h3>
+                        <div class="info d-flex justify-content-between">
+                            <p>June 3 , 2022 <span></span> 45min 15sec</p>
+                            <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share">
+                                <i class="fa fa-share"></i> </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-5 mt-lg-0 mt-md-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="500">
+                <div class="class-interviews">
+                    <div class="cover-interviews">
+                        <img src="images/interviews/5.jpg" alt="" class="img-fluid">
+                    </div>
+
+                    <div class="class-info">
+                        <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a></h3>
+                        <div class="info d-flex justify-content-between">
+                            <p>June 3 , 2022 <span></span> 45min 15sec</p>
+                            <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share">
+                                <i class="fa fa-share"></i> </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mt-5 mt-lg-0 col-lg-4 col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
+                <div class="class-interviews">
+                    <div class="cover-interviews">
+                        <img src="images/interviews/6.jpg" alt="" class="img-fluid">
+                    </div>
+
+                    <div class="class-info">
+                        <h3 class="mb-1"><a href="showinterviews.html">Yoga ap prezante , premye mizik li...</a></h3>
+                        <div class="info d-flex justify-content-between">
+                            <p>June 3 , 2022 <span></span> 45min 15sec</p>
+                            <span title="Share to your social community" data-bs-toggle="modal" data-bs-target="#Share">
+                                <i class="fa fa-share"></i> </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="row justify-content-end">
+            <div class=" mb-lg-0 mb-2 col-lg-2 col-md-10  col-12" data-aos="zoom-in-left" data-aos-delay="500">
+                <a href="" class="btn order-btn">Show More <i class="fa fa-long-arrow-right"></i></a>
+            </div>
+        </div>
 
     </div>
 </section>
@@ -298,7 +304,7 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <div class="footer-log">
                     <div class="logo"></div>
-                    <span class="logo-text">Winshow</span>
+                    <span class="logo-text">Media</span>
                 </div>
                 <p>Labore dolor amet ipsum ea, erat sit ipsum duo eos. Volup amet ea dolor et magna dolor, elitr rebum duo est sed diam elitr. Stet elitr stet diam duo eos rebum ipsum diam ipsum elitr.</p>
             </div>
