--- a/team.html
+++ b/team.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-     <title>Winshow</title>
+     <title>Meet the team</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -90,7 +90,7 @@
                         <div class="mt-lg-5 mb-lg-0 mb-2 col-lg-5 col-md-10  col-12">
                         <div class="section-title" data-aos="fade-up" data-aos-delay="300">
                             <h2>team</h2>
-                            <p>our team</p>
+                            <p>Meet the team</p>
                         </div>
                         </div>
                     </div>
@@ -285,7 +285,7 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <div class="footer-log">
                     <div class="logo"></div>
-                    <span class="logo-text">Winshow</span>
+                    <span class="logo-text">Media</span>
                 </div>
                 <p>Labore dolor amet ipsum ea, erat sit ipsum duo eos. Volup amet ea dolor et magna dolor, elitr rebum duo est sed diam elitr. Stet elitr stet diam duo eos rebum ipsum diam ipsum elitr.</p>
             </div>
